<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hindsr.uw.tacoma.edu.lookandfeel.StylesActivity">

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_email_address"
        style="@style/EditTextStyle"/>
    <!--android:inputType="textEmailAddress" -->

    <EditText
        android:id="@+id/emailPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_password"
        style = "@style/PwdEditTextStyle"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Clear"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:layout_marginStart="66dp"
            android:layout_marginTop="8dp"
            android:background="@color/uwDarkSlateBlue"
            android:text="@string/clear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_constraintLeft_creator="1" />

        <Button
            android:id="@+id/submit"
            style="@style/uw_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="66dp"
            android:layout_marginRight="-434dp"
            android:layout_marginTop="8dp"
            android:text="@string/submit"
            android:background="@drawable/uw_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_constraintTop_creator="1" />
    </android.support.constraint.ConstraintLayout>

    <!-- android:inputType="textPassword" -->
</LinearLayout>
